--- a/CSS/style.css
+++ b/CSS/style.css
@@ -6,7 +6,7 @@ body {
 [class*="section"] {
   border: 1px solid #333;
   min-height: 100px;
-  height: 21vh;
+  height: 125px;
 }
 
 #container,
@@ -24,6 +24,88 @@ body {
   padding: 10px;
   box-sizing: border-box;
   margin-top: 20px;
+}
+
+.section-header {
+  background-color: beige;
+  display: flex;
+  padding: 20px;
+  gap: 20px;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+#btn1 {
+  height: 20px;
+
+}
+
+#btn2 {
+  height: 20px;
+}
+
+#btn3 {
+  height: 20px;
+}
+
+#btn4 {
+  height: 20px;
+  margin-left: auto;
+}
+
+.section-content {
+  height: 125px;
+  display: flex;
+  background-color: beige;
+  padding: 8px;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  gap: 15px;
+}
+
+#content-1 {
+  border: 1px solid black;
+  width: 250px
+}
+
+#content-2 {
+  border: 1px solid black;
+  width: 250px
+}
+
+#content-3 {
+  border: 1px solid black;
+  width: 250px
+}
+
+#content-4 {
+  border: 1px solid black;
+  width: 250px
+}
+
+#content-5 {
+  border: 1px solid black;
+  width: 250px
+}
+
+#content-6 {
+  border: 1px solid black;
+  width: 250px
+}
+
+.section-sidebar {
+  background-color: beige;
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+  gap: 10px;
+  border-bottom: none;
+  border-left: none;
+  justify-content: start;
+}
+
+#btn4 {
+  width: 241.66px;
 }
 
 .section-header {
@@ -67,52 +149,68 @@ body {
   .section-box1 {
     grid-column: 1 / span 3;
   }
+
   .section-box2 {
     grid-column: 4 / span 6;
   }
+
   .section-box3 {
     grid-column: 10 / span 3;
   }
+
   .section-content {
     grid-column: 1 / span 8;
   }
+
   .section-sidebar {
     grid-column: 9 / span 4;
   }
 }
+
 @media screen and (max-width: 960px) {
   .section-box1 {
     grid-column: 1 / span 4;
   }
+
   .section-box2 {
     grid-column: 5 / span 4;
   }
+
   .section-box3 {
     grid-column: 9 / span 4;
   }
+
   .section-content {
     grid-column: 1 / span 6;
   }
+
   .section-sidebar {
     grid-column: 7 / span 6;
   }
+
   .section-footer1 {
     grid-column: 1 / span 6;
   }
+
   .section-footer2 {
     grid-column: 7 / span 6;
   }
+
   .section-footer3 {
     grid-column: 1 / span 6;
   }
+
   .section-footer4 {
     grid-column: 7 / span 6;
   }
+
   [class*="section"] {
     height: 17vh;
   }
 }
+
 @media screen and (max-width: 768px) {
+
   .section-sidebar,
   .section-footer1,
   .section-footer2,
@@ -120,18 +218,22 @@ body {
   .section-footer4 {
     grid-column: 1 / span 12;
   }
+
   .section-box1 {
     grid-column: 1 / span 12;
     grid-row: 2;
   }
+
   .section-box2 {
     grid-column: 1 / span 12;
     grid-row: 3;
   }
+
   .section-box3 {
     grid-column: 1 / span 12;
     grid-row: 4;
   }
+
   .section-content {
     grid-row: 5;
     grid-column: 1 / span 12;
